--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/ZhouxiangHuang/wechat-mp-live-poll#readme",
   "dependencies": {
     "koa": "^2.5.2",
-    "koa-socket": "^4.4.0",
-    "socket.io": "^2.1.1"
+    "koa-socket": "^4.4.0"
   }
 }
