--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/ZhouxiangHuang/wechat-mp-live-poll#readme",
   "dependencies": {
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
     "koa-socket": "^4.4.0",
     "mongoose": "^5.2.7"
   }
