--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "wechat mini application for live poll",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/_mocha ./test/**/*.test.js",
     "start": "node server.js"
   },
   "repository": {
@@ -22,5 +22,10 @@
     "koa-router": "^7.4.0",
     "koa-socket": "^4.4.0",
     "mongoose": "^5.2.7"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0"
   }
 }
