--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/ZhouxiangHuang/wechat-mp-live-poll#readme",
   "dependencies": {
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
     "koa-socket": "^4.4.0",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "tracer": "^0.9.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
