--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^2.2.4",
     "koa-router": "^7.4.0",
     "koa-socket": "^4.4.0",
     "mongoose": "^5.2.7",
