--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "koa-router": "^7.4.0",
     "koa-socket": "^4.4.0",
     "mongoose": "^5.2.7",
-    "tracer": "^0.9.1"
+    "socket.io": "^2.1.1",
+    "tracer": "^0.9.1",
+    "websocket": "^1.0.26"
   },
   "devDependencies": {
     "chai": "^4.1.2",
